--- a/PKHeX.Discord/PKHeX.Discord.csproj
+++ b/PKHeX.Discord/PKHeX.Discord.csproj
@@ -8,7 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Discord.Net" Version="2.1.1" />
     <PackageReference Include="Discord.Net.Commands" Version="2.1.1" />
-    <PackageReference Include="PKHeX.Core" Version="19.12.10-PullRequest2591.18" />
+    <PackageReference Include="PKHeX.Core" Version="19.12.27" />
     <PackageReference Include="QRCoder" Version="1.3.6" />
     <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
     <PackageReference Include="System.Resources.Extensions" Version="4.7.0" />
